--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -81,7 +81,6 @@ footer a:hover {
 .social-media {
   display: flex;
   flex-direction: row;
-  /* justify-content: space-around; */
   margin: 2rem 0 2rem;
 }
 
@@ -89,10 +88,11 @@ footer a:hover {
   padding-right: 1rem;
 }
 
-
-.social-media img {
-  background-color: var(--dark-green);
+.social-media svg:hover {
+  fill: var(--light-pink);
 }
+
+
 
 
 form {
@@ -107,7 +107,7 @@ form label {
 }
 
 form input {
-  /* width: 75%; */
+  
   flex-basis: 80%;
   height: 60px;
   padding: 0.6rem;
@@ -223,6 +223,7 @@ form button img {
       width: 50%;
       h2 {
         font-size: 3rem;
+        
       }
     }
 
@@ -280,6 +281,11 @@ form button img {
           width: 30%;
           margin-top: 0;
           justify-content: flex-end;
+          
+          a {
+            padding-right: 0;
+            padding-left: 1rem;
+          }
         }
       }
 
@@ -302,7 +308,63 @@ form button img {
           > div {
             padding-left: 1rem;
           }
+
+          .footer-right-links-box {
+            order: 1;
+          }
         }
+
+      }
+    }
+  }
+}
+
+@media (min-width:1170px) {
+
+}
+
+@media (min-width: 1470px) {
+  .footer-container {
+    width: 1340px;
+    padding-top: 6rem;
+
+    .row {
+      width: 60%;
+      h2 {
+        font-size: 3.5rem;
+      }
+    }
+
+    .footer-menu {
+      margin-bottom: 3rem;
+
+      .footer-small-text {
+        align-items: flex-start;
+
+        .small-text {
+          p {
+            margin: 0;
+          }
+        }
+
+        .footer-right-links {
+          width: 100%;
+          flex-basis: 35%;
+          justify-content: flex-end;
+          .footer-right-links-box {
+            justify-content: flex-end;
+          }
+
+          > div {
+            p {
+              margin: 0;
+            }
+          }
+
+          
+          
+        }
+
       }
     }
   }
