--- a/styles/_header.scss
+++ b/styles/_header.scss
@@ -111,7 +111,7 @@ li a:hover {
 .button-start a {
   color: #ffffff;
   font-size: 0.875rem;
-  width: 160px;
+  width: 175px;
   height: 35px;
   display: flex;
   justify-content: center;
@@ -127,9 +127,7 @@ li a:hover {
 
 
 }
-// .button-start img {
-//   background-color: var(--bright-red);
-// }
+
 
 
 
@@ -161,7 +159,7 @@ li a:hover {
 
 @media (min-width: 990px) {
   .header-container {
-    width: 95%;
+    width: 90%;
     max-width: 1300px;
     height: auto;
     display: flex;
@@ -215,11 +213,8 @@ li a:hover {
             a:nth-of-type(5) {
               justify-content: center;
 
-
             }
-            // img {
-            //   background-color: var(--verylight-beige);
-            // }
+            
 
             ul {
               display: none;
@@ -258,6 +253,8 @@ li a:hover {
           }
         }
       }
+
+     
     }
   }
 }
@@ -269,7 +266,15 @@ li a:hover {
       width: 90%;
     }
   }
+  
+}
 
-  
-  
+@media (min-width:1470px) {
+  header {
+    padding-bottom: 10rem;
+    
+    .header-container {
+      width: 1340px;
+    }
+  }
 }
