--- a/styles/_intro.scss
+++ b/styles/_intro.scss
@@ -79,7 +79,9 @@
   background-color: var(--light-pink);
   color: var(--bright-red);
   width: 180px;
-  text-align: center;
+  vertical-align: middle;
+  padding-top: 0.9rem;
+
 }
 
 .intro .links a:last-of-type:hover {
@@ -115,11 +117,11 @@
 }
 
 .images img {
-  /* width: 220px; */
+ 
   width: 80%;
   aspect-ratio: 3 / 4;
   height: auto;
-  /* height: 285px; */
+ 
   margin: 0 auto;
 }
 
@@ -290,7 +292,7 @@
         }
         .paragraphs {
           width: 95%;
-
+          
           .splitter {
             width: 95%;
           }
@@ -301,6 +303,7 @@
             margin-bottom: 24px;
             p {
               width: 75%;
+
               em {
                 font-size: 1.5rem;
               }
@@ -316,7 +319,7 @@
     }
 
     .intro-row:nth-of-type(2) {
-      // width: 50%;
+     
       .images img {
         width: 70%; 
       }
@@ -324,6 +327,56 @@
         width: 80%;
         left: 50px;
       }
+    }
+  }
+}
+
+@media (min-width: 1470px) {
+  .intro {
+    .intro-container {
+      width: 1340px;
+      height: auto;
+      
+      .intro-row:first-of-type {
+        height: 640px;
+
+        .intro-column {
+          margin-top: 0;
+          .paragraphs {
+            .second {
+              p {
+                width: 100%;
+              }
+            }
+
+             .links {
+              a {
+                margin-bottom: 0;
+              }
+            }
+          }
+        }
+
+      }
+      .intro-row:nth-of-type(2) {
+        height: 640px;
+
+           .intro-column {
+              
+              height: 640px;
+              margin: 0 auto;
+
+              .images {
+                
+                height: 550px;
+
+               
+              }
+           }
+        
+      }
+
+
     }
   }
 }
