--- a/styles/_last-section.scss
+++ b/styles/_last-section.scss
@@ -82,7 +82,7 @@
   }
   .last-section-container {
     width: 90%;
-    // height: 610px;
+    
     display: flex;
     flex-direction: row;
     padding: 2rem 0 4rem;
@@ -131,7 +131,7 @@
   .last-section-container {
     justify-content: space-between;
     padding: 6rem 0;
-    // gap: 50px;
+    
 
     .last-section-row:first-of-type {
       h2 {
@@ -148,3 +148,30 @@
     }
   }
 }
+
+@media (min-width:1170px) {
+
+}
+
+@media (min-width: 1470px) {
+  .last-section {
+    .last-section-container {
+      width: 1340px;
+
+      .last-section-row {
+        height: 535px;
+      }
+
+      .last-section-row:last-of-type {
+        picture {
+          img {
+            margin-top: 4rem;
+
+          }
+        }
+      }
+    }
+  }
+}
+
+
