--- a/styles/_service.scss
+++ b/styles/_service.scss
@@ -168,3 +168,12 @@
     }
   }
 }
+
+@media (min-width: 1470px) {
+  .service {
+    .service-container {
+      width: 1340px;
+    }
+  }
+}
+   
